[gd_scene load_steps=19 format=2]

[ext_resource path="res://Music/MenuMusic.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/UI/BGMain.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Play.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/PlayText.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Exit.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/ExitText.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/BlackCreepMain.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/GameName.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=9]
[ext_resource path="res://Assets/UI/Controls.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/a.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/d.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/space.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/line.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Exit"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Exit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Play"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Play:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0392157, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stop"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Play:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exit:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "BG"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Controls/GameName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 108, 44 ), Vector2( 108, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/Controls/Player:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.494118, 0, 1 ), Color( 0.992157, 1, 0, 1 ), Color( 0.101961, 0.992157, 0, 1 ), Color( 0, 0.807843, 0.788235, 1 ), Color( 0, 0.133333, 1, 1 ), Color( 0.384314, 0, 1, 1 ), Color( 0.945098, 0, 1, 1 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 124, 72 )
scale = Vector2( 7.979, 5.047 )
z_index = -1
texture = ExtResource( 2 )

[node name="Cam" type="Camera2D" parent="."]
position = Vector2( 124, 72 )
current = true
zoom = Vector2( 0.25, 0.27 )

[node name="Play" type="Button" parent="."]
margin_left = 184.0
margin_top = 36.0
margin_right = 216.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Sprite" parent="Play"]
position = Vector2( 16, 16 )
scale = Vector2( 4.25, 4.25 )
texture = ExtResource( 3 )

[node name="PlayText" type="Sprite" parent="Play"]
position = Vector2( 16, -8 )
texture = ExtResource( 4 )

[node name="Exit" type="Button" parent="."]
margin_left = 184.0
margin_top = 92.0
margin_right = 216.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Sprite" parent="Exit"]
position = Vector2( 16, 16 )
scale = Vector2( 4.25, 4.25 )
texture = ExtResource( 5 )

[node name="ExitText" type="Sprite" parent="Exit"]
position = Vector2( 16, -12 )
texture = ExtResource( 6 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Exit = SubResource( 1 )
anims/Play = SubResource( 2 )
anims/Stop = SubResource( 3 )

[node name="BG" type="AnimationPlayer" parent="."]
anims/BG = SubResource( 4 )

[node name="Controls" type="Node" parent="BG"]

[node name="Player" type="Sprite" parent="BG/Controls"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 68, 88 )
scale = Vector2( 9.75, 9.75 )
texture = ExtResource( 7 )

[node name="GameName" type="Sprite" parent="BG/Controls"]
modulate = Color( 1, 0, 0.470588, 1 )
position = Vector2( 108, 44 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Controls" type="Sprite" parent="BG/Controls"]
modulate = Color( 1, 0, 0.470588, 1 )
position = Vector2( 132, 85 )
texture = ExtResource( 10 )

[node name="A" type="Sprite" parent="BG/Controls"]
position = Vector2( 104, 99 )
texture = ExtResource( 11 )

[node name="D" type="Sprite" parent="BG/Controls"]
position = Vector2( 122, 99 )
texture = ExtResource( 12 )

[node name="Space" type="Sprite" parent="BG/Controls"]
position = Vector2( 152, 102.5 )
scale = Vector2( 2, 2.313 )
texture = ExtResource( 13 )

[node name="Line1" type="Sprite" parent="BG/Controls"]
position = Vector2( 112, 99 )
scale = Vector2( 1.5, 2 )
texture = ExtResource( 14 )

[node name="Line2" type="Sprite" parent="BG/Controls"]
position = Vector2( 130, 99 )
scale = Vector2( 1.5, 2 )
texture = ExtResource( 14 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
